# CSV_to_Dataverse_JSON_citation

./: .gitignore  CHANGES.md  Csv_to_json - Citation.csv  GETTING_STARTED.md  README.md  TEMPLATE_CSV_WITH_ALL_COLUMNS.csv  TEST_README.md  UPDATE_SUMMARY.md  csv_to_dataverse_json.py  output_metadata.json  output_template_test.json  pyproject.toml  test_csv_to_dataverse_json.py
