[project]
name = "csv-to-dataverse-json"
version = "1.0.0"
description = "Simple tool to convert CSV files into Dataverse/Borealis JSON format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
csv-to-dataverse = "csv_to_dataverse_json:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
